[gd_scene load_steps=7 format=3 uid="uid://2r2xorepwlip"]

[ext_resource type="PackedScene" uid="uid://cdk6hwb4hi2wc" path="res://Player/player.tscn" id="1_ndiqr"]
[ext_resource type="Script" path="res://Scenes/WorldScript.gd" id="1_q84b7"]
[ext_resource type="PackedScene" uid="uid://btv0a42cgxt8g" path="res://Scenes/levels/WE_test.tscn" id="1_v8a0n"]
[ext_resource type="PackedScene" uid="uid://c7xbusdsm4w70" path="res://Enemy/Minotaur.tscn" id="2_sdkh1"]
[ext_resource type="PackedScene" uid="uid://ikej17mmjbem" path="res://Scenes/Enviroment/Colosseum.tscn" id="4_6l2dy"]
[ext_resource type="PackedScene" uid="uid://fx8rdv6hb4q0" path="res://Enemy/Boar.tscn" id="5_q3wbj"]

[node name="World" type="Node3D"]
script = ExtResource("1_q84b7")
boar_scene = ExtResource("5_q3wbj")
minotaur_scene = ExtResource("2_sdkh1")

[node name="WorldEnvironment" parent="." instance=ExtResource("1_v8a0n")]

[node name="Colosseum" parent="." instance=ExtResource("4_6l2dy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8379, -1.46528, 5.62704)

[node name="Player" parent="." instance=ExtResource("1_ndiqr")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.53785, 0, 5.43563)

[node name="BoarSpawnPoint1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0039, 0.484506, 5.37819)

[node name="BoarSpawnPoint2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.83895, 0.433605, -3.26382)

[node name="BoarSpawnPoint3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.49963, 0.562449, 5.34948)

[node name="BoarSpawnPoint4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.92293, 0.761309, 14.5864)

[node name="BoarSpawnPoint5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.98051, 0.322445, -0.0344324)

[node name="BoarSpawnPoint6" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.62399, 0.281067, 0)

[node name="BoarSpawnPoint7" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.79106, 0.833313, 13.3204)

[node name="BoarSpawnPoint8" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.83568, 0, 12.8054)

[node name="MinotaurSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9594, 3.7647, 5.61259)
